--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "resolutions": {
+    "node": ">=14.20.1"
+  },
   "author": "harsh parashar",
   "license": "ISC",
   "dependencies": {
